Update JA translations

--- a/thousand.jp.html
+++ b/thousand.jp.html
@@ -20,17 +20,23 @@
   page.title h4 { display: block;text-align: center;font-size: 18px;margin-top: 40px;font-weight: normal;line-height: 40px;margin-bottom: 40px;text-transform: uppercase  }
   page.title img { display: block;width: 200px;margin: 0px auto;margin-bottom: 40px }
   page.title grave { background-position: center -1px;line-height: 50px;display: inline-block }
+  page.title .cap { background-position: center -1px;line-height: 50px;display: inline-block }
   page.title trema:before { display:none !important }
   page.preface p { padding:40px; font-size:26px; line-height:36px }
   page.preface trema { display:none !important }
   page.chapter h1 { position:absolute; top:40%; display:block; text-align:center; margin-top:-13px;font-size:40px; width:100%; font-weight: normal }
   page.chapter img { width: 300px;height: 300px;position: absolute;top: calc(50%);left: calc(50% - 150px) }
+  page.chapter h1 grave { display: inline;background-image: url(assets/accent.grave.svg);background-position: 2px 5px !important }
+  page.chapter h1 aigue { display:inline; background-image:url(assets/accent.aigue.svg); background-position:center 0px }
+  page.chapter h1 cedil { display:inline; background-image:url(assets/accent.cedil.svg); background-position:3px 13px }
   page.illustration img { display: block; width:100%; position:absolute; bottom:0px }
   page.illustration h1 { position:absolute; top:100px; display:block; text-align:center; width:calc(100% - 40px); padding:0px 20px; font-size:38px;font-weight: normal }
+  page.thank p { padding:40px; font-size:26px; line-height:36px }
+  page.thank h1 { font-weight: normal;text-transform: uppercase;display: block;text-align: center;font-size: 36px;margin-top: 120px;margin-bottom: 40px }
 </style>
 
 <page class='cover'>
-  <img src='assets/cover.svg'/><h1>Thousand Rooms</h1><img class='logo' src='assets/hundred.rabbits.logo.svg'/>
+  <img src='assets/cover.svg'/><h1>せんのへや</h1><img class='logo' src='assets/hundred.rabbits.logo.svg'/>
 </page>
 
 <page class='blank'>
@@ -39,11 +45,11 @@
 
 <page class='title'>
   
-<h1>Thousand Rooms</h1>
-<h2>ネコ、アウル、バットとキツネ</h2>
+<h1>せんのへや</h1>
+<h2>ネコ と フクロウ と<br/>コウモリ と キツネ</h2>
 <img src='assets/glyph.png'/>
-<h3>レッカベラムのイラスト<br />デヴィンルリンヴェガちょ</h3>
-<h4>しょはん</h4>
+<h3>レッカベラム　絵<br />デルリン　文</h3>
+<h4>初版</h4>
 
 </page>
 
@@ -52,7 +58,7 @@
 </page>
 
 <page class='preface'>
-  <p>へやにおきる、こわさないのかべでとりまいている。つくえのうえには、えんぴつとブランクのかみをいる。<br/>　つくえのなかには、あたしのてがきのメモがいる。なにもおもいださない。</p>
+  <p>きみは　めを　さました。<br/>かたい　かべで　かこまれた<br/>へやの　なかで。<br/>つくえの　うえには、<br/>えんぴつと　かみが　あった。<br/><br/>つくえの　なかには、　じぶんが<br/>かいた　メモが　あった。<br/><br/>なにも　おぼえていない。</p>
 </page>
 
 <page class='blank'>
@@ -60,27 +66,27 @@
 </page>
 
 <page class='chapter'>
-  <h1>だい１か</h1><img src='assets/lesson.1.png'/>
+  <h1>だい１わ</h1><img src='assets/lesson.1.png'/>
 </page>
 
 <page class='illustration'>
   <img src='assets/cat.1.png'/>
-  <h1>ネコはおきる。</h1>
+  <h1>ネコは　めを　さました。</h1>
 </page>
 
 <page class='illustration'>
   <img src='assets/owl.1.png'/>
-  <h1>アウルはかみをみつける。</h1>
+  <h1>フクロウは　かみを<br/>みつけた。</h1>
 </page>
 
 <page class='illustration'>
   <img src='assets/bat.1.png'/>
-  <h1>バットはえんぴつをみつける。</h1>
+  <h1>コウモリは　えんぴつを<br/>みつけた。</h1>
 </page>
 
 <page class='illustration'>
   <img src='assets/fox.1.png'/>
-  <h1>キツネはつくえをあく。</h1>
+  <h1>キツネは　つくえを　あけた。</h1>
 </page>
 
 <page class='blank'>
@@ -88,27 +94,27 @@
 </page>
 
 <page class='chapter'>
-  <h1>だい２か</h1><img src='assets/lesson.2.png'/>
+  <h1>だい２わ</h1><img src='assets/lesson.2.png'/>
 </page>
 
 <page class='illustration'>
   <img src='assets/cat.2.png'/>
-  <h1>ネコはかべをひっかく。</h1>
+  <h1>ネコは　かべを　ひっかいた。</h1>
 </page>
 
 <page class='illustration'>
   <img src='assets/owl.2.png'/>
-  <h1>アウルはつくえにメッセージをおく。</h1>
+  <h1>フクロウは　つくえに<br/>メモを　のこした。</h1>
 </page>
 
 <page class='illustration'>
   <img src='assets/bat.2.png'/>
-  <h1>バットはふたつめのえんぴつをみつける。</h1>
+  <h1>コウモリは　にほんめの<br/>えんぴつを　みつけた。</h1>
 </page>
 
 <page class='illustration'>
   <img src='assets/fox.2.png'/>
-  <h1>キツネはつくえをかいたいする</h1>
+  <h1>キツネは　つくえを<br/>バラバラに　した。</h1>
 </page>
 
 <page class='blank'>
@@ -116,27 +122,27 @@
 </page>
 
 <page class='chapter'>
-  <h1>だい３か</h1><img src='assets/lesson.3.png'/>
+  <h1>だい３わ</h1><img src='assets/lesson.3.png'/>
 </page>
 
 <page class='illustration'>
   <img src='assets/cat.3.png'/>
-  <h1>ネコはえんぴつとかみをこわす。</h1>
+  <h1>ネコは　えんぴつと　かみを　めちゃくちゃに　した。</h1>
 </page>
 
 <page class='illustration'>
   <img src='assets/owl.3.png'/>
-  <h1>アウルはつくえのなかにメモをみつける。</h1>
+  <h1>フクロウは　つくえの<br/>なかに　メモを　みつけた。</h1>
 </page>
 
 <page class='illustration'>
   <img src='assets/bat.3.png'/>
-  <h1>バットはえんぴつがおおいのつくえをみつける。</h1>
+  <h1>コウモリは　つくえの<br/>なかに　えんぴつを<br/>いっぱい　みつけた。</h1>
 </page>
 
 <page class='illustration'>
   <img src='assets/fox.3.png'/>
-  <h1>キツネはつくえをうらがえしにたてる。</h1>
+  <h1>キツネは　つくえを<br/>うらがえしに　くみたてた。</h1>
 </page>
 
 <page class='blank'>
@@ -144,27 +150,27 @@
 </page>
 
 <page class='chapter'>
-  <h1>だい４か</h1><img src='assets/lesson.4.png'/>
+  <h1>だい４わ</h1><img src='assets/lesson.4.png'/>
 </page>
 
 <page class='illustration'>
   <img src='assets/cat.4.png'/>
-  <h1>ネコはつくえにはいる。</h1>
+  <h1>ネコは　つくえに　はいっ た。</h1>
 </page>
 
 <page class='illustration'>
   <img src='assets/owl.4.png'/>
-  <h1>アウルはしりたい。</h1>
+  <h1>フクロウは　こたえを<br/>さがした。</h1>
 </page>
 
 <page class='illustration'>
   <img src='assets/bat.4.png'/>
-  <h1>バットはにげない。</h1>
+  <h1>コウモリは　あきらめた。</h1>
 </page>
 
 <page class='illustration'>
   <img src='assets/fox.4.png'/>
-  <h1>キツネはきゃくがある。</h1>
+  <h1>キツネの　ところに<br/>ともだちが　きた。</h1>
 </page>
 
 <page class='blank'>
@@ -172,27 +178,27 @@
 </page>
 
 <page class='chapter'>
-  <h1>だい５か</h1><img src='assets/lesson.5.png'/>
+  <h1>だい５わ</h1><img src='assets/lesson.5.png'/>
 </page>
 
 <page class='illustration'>
   <img src='assets/cat.5.png'/>
-  <h1>ネコはつくえからをでる。</h1>
+  <h1>ネコは　つくえから　でた。</h1>
 </page>
 
 <page class='illustration'>
   <img src='assets/owl.5.png'/>
-  <h1>アウルすべてわかる。</h1>
+  <h1>フクロウは　こたえを<br/>みつけた。</h1>
 </page>
 
 <page class='illustration'>
   <img src='assets/bat.5.png'/>
-  <h1>バットはおきる。</h1>
+  <h1>コウモリは　めを　さました。</h1>
 </page>
 
 <page class='illustration'>
   <img src='assets/fox.5.png'/>
-  <h1>キツネはにばんめのきゃくがある。</h1>
+  <h1>キツネの　ところに<br/>もうひとりが　きた。</h1>
 </page>
 
 <page class='blank'>
@@ -200,27 +206,27 @@
 </page>
 
 <page class='chapter'>
-  <h1>だい６か</h1><img src='assets/lesson.6.png'/>
+  <h1>だい６わ</h1><img src='assets/lesson.6.png'/>
 </page>
 
 <page class='illustration'>
   <img src='assets/cat.6.png'/>
-  <h1>ネコはつくえをこわす。</h1>
+  <h1>ネコは　つくえを<br/>こわした 。</h1>
 </page>
 
 <page class='illustration'>
   <img src='assets/owl.6.png'/>
-  <h1>アウルはらくがきをみつける</h1>
+  <h1>フクロウは　らくがきを<br/>みつけた。</h1>
 </page>
 
 <page class='illustration'>
   <img src='assets/bat.6.png'/>
-  <h1>バットはえんぴつをみつける。</h1>
+  <h1>コウモリは　えんぴつを<br/>みつけた。</h1>
 </page>
 
 <page class='illustration'>
   <img src='assets/fox.6.png'/>
-  <h1>キツネはきゃくがおおい。</h1>
+  <h1>キツネの　ところにきた<br/>ともだちが　おおすぎた。</h1>
 </page>
 
 <page class='blank'>
@@ -228,16 +234,24 @@
 </page>
 
 <page class='chapter'>
-  <h1>さいしゅうか</h1><img src='assets/lesson.7.png'/>
-</page>
-
-<page class='illustration'>
-  <img src='assets/you.1.png'/>
-  <h1>なにするか？</h1>
+  <h1>さいしゅうわ</h1><img src='assets/lesson.7.png'/>
 </page>
 
 <page class='blank'>
   
+</page>
+
+<page class='illustration'>
+  <img src='assets/you.1.png'/>
+  <h1>きみなら　どうする？</h1>
+</page>
+
+<page class='blank'>
+  
+</page>
+
+<page class='thank'>
+  <h1>よんでくれて　ありがとう！</h1><p></p>
 </page>
 
 <page class='blank'>
